--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -72,8 +72,17 @@
         </form>
         `;
         attention.custom({
-            title: 'Choose your dates',
             msg: html,
+            title: 'Choose your dates',
+            callback: function(result){
+                console.log("called")
+
+                fetch('/search-availability-json')
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log(data);
+                    })
+            }
         });
     })
 </script>
