--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -10,7 +10,8 @@
         <title>My Nice Page</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-              integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+              integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+              crossorigin="anonymous">
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/css/datepicker-bs4.min.css">
         <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
@@ -154,20 +155,20 @@
         }
 
         {{with .Error}}
-        notify("{{.}}","error")
+            notify("{{.}}", "error");
         {{end}}
 
         {{with .Flash}}
-        notify("{{.}}","success")
+        notify("{{.}}", "success");
         {{end}}
 
         {{with .Warning}}
-        notify("{{.}}","warning")
+        notify("{{.}}", "warning");
         {{end}}
 
         function Prompt() {
             let toast = function (c) {
-                const{
+                const {
                     msg = '',
                     icon = 'success',
                     position = 'top-end',
@@ -229,19 +230,19 @@
                     title = "",
                 } = c;
 
-                const { value: result } = await Swal.fire({
+                const {value: result} = await Swal.fire({
                     title: title,
                     html: msg,
                     backdrop: false,
                     focusConfirm: false,
                     showCancelButton: true,
                     willOpen: () => {
-                        if(c.willOpen !== undefined){
+                        if (c.willOpen !== undefined) {
                             c.willOpen();
                         }
                     },
                     didOpen: () => {
-                        if(c.didOpen !== undefined){
+                        if (c.didOpen !== undefined) {
                             c.didOpen();
                         }
                     },
@@ -253,16 +254,16 @@
                     }
                 })
 
-                if(result){
-                    if(result.dismiss !== Swal.DismissReason.cancel){
+                if (result) {
+                    if (result.dismiss !== Swal.DismissReason.cancel) {
                         if (result.value !== "") {
-                            if(c.callback !== undefined){
+                            if (c.callback !== undefined) {
                                 c.callback(result);
                             }
-                        }else{
+                        } else {
                             c.callback(false);
                         }
-                    }else{
+                    } else {
                         c.callback(false);
                     }
                 }
