--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -4,24 +4,22 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                {{ $res := index .Data "reservation" }}
-                <h1 class="mt-3">Make Reservation</h1>
-
-                <p>
-                    <strong>Reservation Details</strong><br/>
-                    Room: {{$res.Room.RoomName}}<br/> 
-                    Arrival: {{index .StringMap "start_date"}}<br/>
-                    Departure: {{index .StringMap "end_date"}}
-                </p>
-
                 {{$res := index .Data "reservation"}}
 
-                <form method="post" action="" class="" novalidate>
-                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                <h1>Make a Reservation</h1>
+                <p><strong>Reservation Details</strong><br>
+                Room: {{$res.Room.RoomName}}<br>
+                Arrival: {{index .StringMap "start_date"}}<br>
+                Departure: {{index .StringMap "end_date"}}
+                </p>
 
+
+
+                <form action="/make-reservation" method="post" class="" novalidate>
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
                     <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
-                    <input type="hidden" name="room_id" value="{{$res.RoomID" />
+                    <input type="hidden" name="room_id" value="{{$res.RoomID}}">
 
                     <div class="form-group mt-3">
                         <label for="first_name">First Name:</label>
@@ -42,9 +40,6 @@
                                id="last_name" autocomplete="off" type='text'
                                name='last_name' value="{{$res.LastName}}" required>
                     </div>
-
-                    
-                    
 
                     <div class="form-group">
                         <label for="email">Email:</label>
@@ -69,10 +64,7 @@
                     <hr>
                     <input type="submit" class="btn btn-primary" value="Make Reservation">
                 </form>
-
-
             </div>
         </div>
-
     </div>
 {{end}}
