--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -18,6 +18,15 @@
         <!-- endinject -->
         <link rel="shortcut icon" href="/static/admin/images/favicon.png"/>
 
+        <style>
+            .content-wrapper{
+                background: white;
+            }
+            label{
+                font-weight: bold;
+            }
+        </style>
+
         {{block "css" . }}
 
         {{end}}
@@ -58,26 +67,16 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false"
-                           aria-controls="ui-basic">
-                            <i class="ti-palette menu-icon"></i>
-                            <span class="menu-title">Reservations</span>
-                            <i class="menu-arrow"></i>
+                        <a class="nav-link" href="/admin/reservations-new">
+                            <i class="ti-shield menu-icon"></i>
+                            <span class="menu-title">New Reservations</span>
                         </a>
-                        <div class="collapse" id="ui-basic">
-                            <ul class="nav flex-column sub-menu">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/admin/reservations-new">New
-                                        Reservations
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/admin/reservations-all">All
-                                        Reservations
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/reservations-all">
+                            <i class="ti-shield menu-icon"></i>
+                            <span class="menu-title">All Reservations</span>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/admin/reservations-calendar">
@@ -124,7 +123,6 @@
         <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
-
     <!-- plugins:js -->
     <script src="/static/admin/vendors/base/vendor.bundle.base.js"></script>
     <!-- endinject -->
