--- a/templates/admin-all-reservations.page.tmpl
+++ b/templates/admin-all-reservations.page.tmpl
@@ -28,7 +28,7 @@
                 <tr>
                     <td>{{.ID}}</td>
                     <td>
-                        <a href="/admin/reservations/all/{{.ID}}">
+                        <a href="/admin/reservations/all/{{.ID}}/show">
                         {{.LastName}}
                         </a>
                     </td>
