--- a/templates/admin-reservations-show.page.tmpl
+++ b/templates/admin-reservations-show.page.tmpl
@@ -16,6 +16,9 @@
 
         <form action="/admin/reservations/{{$src}}/{{$res.ID}}" method="post" class="" novalidate>
             <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+            <input type="hidden" name="year" value="{{index .StringMap "year"/>
+            <input type="hidden" name="month" value="{{index .StringMap "month"/>
+
 
             <div class="form-group mt-3">
                 <label for="first_name">First Name:</label>
@@ -60,7 +63,11 @@
             <hr>
             <div class="float-left">
                 <input type="submit" class="btn btn-primary" value="Submit">
+                {{if eq $src "cal"}}
+                <a href="#!" onclick="window.history.go(-1)" class="btn btn-warning">Cancel</a>
+                {{else}}
                 <a href="/admin/reservations/-{{$src}}" class="btn btn-warning">Cancel</a>
+                {{end}}
                 <a href="#!" class="btn btn-info" onclick="processRes({{$res.ID}})">
                     Mark as Processed
                 </a>
@@ -84,7 +91,7 @@
             msg: 'Are you sure?',
             callback: function(result){
                 if(result !== false){
-                    window.location.href = "/admin/process-reservation/{{$src}}/"+id;
+                    window.location.href = "/admin/process-reservation/{{$src}}/"+id+"/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
                 }
             }
         })
@@ -96,7 +103,7 @@
             msg: 'Are you sure?',
             callback: function(result){
                 if(result !== false){
-                    window.location.href = "/admin/delete-reservation/{{$src}}/"+id;
+                    window.location.href = "/admin/delete-reservation/{{$src}}/"+id+"/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
                 }
             }
         })
